Add example for create new node

--- a/n8n_data/nodes/package.json
+++ b/n8n_data/nodes/package.json
@@ -1,5 +1,7 @@
 {
   "name": "installed-nodes",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "n8n-nodes-chatwoot": "0.1.40"
+  }
 }
