--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,16 @@ services:
     ports:
       - '5678:5678'
     environment:
-      - N8N_BASIC_AUTH_ACTIVE=true
-      - N8N_BASIC_AUTH_USER=admin
-      - N8N_BASIC_AUTH_PASSWORD=supersecret
+      - N8N_BASIC_AUTH_ACTIVE=false
+      - N8N_USER_MANAGEMENT_DISABLED=false
+      - N8N_BASIC_AUTH_USER=admin@example.com
+      - N8N_BASIC_AUTH_PASSWORD=Superadmin
       - N8N_HOST=localhost
       - N8N_PORT=5678
       - WEBHOOK_URL=http://localhost:5678
+      - N8N_CUSTOM_EXTENSIONS=/data/custom
     volumes:
       - ./n8n_data:/home/node/.n8n
+      - ./n8n-custom:/data/custom
+      - ./ndx.csv:/ndx.csv
+
